# rusty_presquile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: sample_bench.rs  sample_bench_par.rs  sample_bench_seq.rs
src/: lib.rs  main.rs
src/model/: mod.rs
