[package]
name = "presquile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
derive-new = "0.7.0"
id3 = "1.9.0"
metadata = "0.1.8"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[workspace]

[[bench]]
name = "sample_bench_seq"
harness = false

[[bench]]
name = "sample_bench_par"
harness = false
